--- a/task3/index.html
+++ b/task3/index.html
@@ -9,7 +9,7 @@
  <body>
    <div class="container">
     <header>
-     <img class="logo" src="img/logo.jpg" alt="Logo">
+     <a href=""><img class="logo" src="img/logo.jpg" alt="Logo"></a>
      <nav>
        <a href="">Главная</a>
        <a href="">Товары</a>
