Fixed some bugs

--- a/task4/index.html
+++ b/task4/index.html
@@ -14,23 +14,23 @@
   <div class="main_container">
    <div class="contents">
     <header>
-     <div class="logo"></div>
+     <a href="#"><div class="logo"></div></a>
      <div class="right_box">
       <div class="contacts">
        <p>Наши контакты:</p>
        <p>+9-098-765-4321</p>
        <p>+9-0123-456-890</p>
-       <p>info@asia-holidays.com</p>
+       <p><a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">info@asia-holidays.com</a></p>
       </div>
       <div class="clear"></div>
       <div class="country">
        <ul>
-        <li class="india"><a href="">Индия</a></li>
-        <li class="nepal"><a href="">Непал</a></li>
-        <li class="tibet"><a href="">Тибет</a></li>
-        <li class="butan"><a href="">Бутан</a></li>
-        <li class="slanka"><a href="">Шри-Ланка</a></li>
-        <li class="maldivi"><a href="">Мальдивы</a></li>
+        <li class="india"><a href="#">Индия</a></li>
+        <li class="nepal"><a href="#">Непал</a></li>
+        <li class="tibet"><a href="#">Тибет</a></li>
+        <li class="butan"><a href="#">Бутан</a></li>
+        <li class="slanka"><a href="#">Шри-Ланка</a></li>
+        <li class="maldivi"><a href="#">Мальдивы</a></li>
        </ul>
       </div>
      </div>
@@ -38,37 +38,37 @@
     <div class="slider"></div>
     <nav>
      <ul id="menu">
-      <li class="main_li">Главная</li>
-      <li>Путешествие<div class="rectangleT"></div>
+      <li class="main_li"><a href='#'>Главная</a></li>
+      <li><a href='#'>Путешествие<div class="rectangleT"></div></a>
        <ul>
-        <li>Путешествие 1</li>
-        <li>Путешествие 2</li>
-        <li>Путешествие 3</li>
-        <li>Путешествие 4</li>
-        <li>Путешествие 5</li>
+        <li><a href='#'>Путешествие 1</a></li>
+        <li><a href='#'>Путешествие 2</a></li>
+        <li><a href='#'>Путешествие 3</a></li>
+        <li><a href='#'>Путешествие 4</a></li>
+        <li><a href='#'>Путешествие 5</a></li>
        </ul>
       </li>
-      <li>Услуги<div class="rectangleU"></div>
+      <li><a href='#'>Услуги<div class="rectangleU"></div></a>
        <ul>
-        <li>Услуги 1</li>
-        <li>Услуги 2</li>
-        <li>Услуги 3</li>
-        <li>Услуги 4</li>
-        <li>Услуги 5</li>
+        <li><a href='#'>Услуги 1</a></li>
+        <li><a href='#'>Услуги 2</a></li>
+        <li><a href='#'>Услуги 3</a></li>
+        <li><a href='#'>Услуги 4</a></li>
+        <li><a href='#'>Услуги 5</a></li>
        </ul>
       </li>
-      <li>Партнерам<div class="rectangleP"></div>
+      <li><a href='#'>Партнерам<div class="rectangleP"></div></a>
        <ul>
-        <li>Партнерам 1</li>
-        <li>Партнерам 2</li>
-        <li>Партнерам 3</li>
-        <li>Партнерам 4</li>
-        <li>Партнерам 5</li>
+        <li><a href='#'>Партнерам 1</a></li>
+        <li><a href='#'>Партнерам 2</a></li>
+        <li><a href='#'>Партнерам 3</a></li>
+        <li><a href='#'>Партнерам 4</a></li>
+        <li><a href='#'>Партнерам 5</a></li>
        </ul>
       </li>
-      <li>Отзывы клиентов</li>
-      <li>О нас</li>
-      <li>Контакты</li>
+      <li><a href='#'>Отзывы клиентов</a></li>
+      <li><a href='#'>О нас</a></li>
+      <li><a href='#'>Контакты</a></li>
      </ul>
     </nav>
     <main>
@@ -117,7 +117,7 @@
      </div>
     </main>
    </div>
-   <div class="copy"><span>Copyright(C) asia-holidays.com 2010</span></div>
+   <div class="copy"><span>Copyright(C) <a href="">asia-holidays.com 2010</a></span></div>
   </div>
  </body>
 </html>
