Fixed bugs. Change method alignment

--- a/task5/index.html
+++ b/task5/index.html
@@ -15,7 +15,7 @@
             <li class="menu"><a href="#">Contato</a></li>
             <li class="menu"><a href="#">Ajuda</a></li>
             <li class="flag"><a href="#">Minhas Ofertas</a></li>
-            <li class="loging"><a href="#">Ola! <u>Entrar</u> ou <u>Cadastre-se</u></a></li>
+            <li class="loging">Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></li>
         </ul>
     </div>
     <div class="register">
