Fixed bug with display the boxes in zoom

--- a/task5/index.html
+++ b/task5/index.html
@@ -7,54 +7,56 @@
   <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
-    <div class="top_line">
-        <ul>
-            <li class="menu"><a href="square.html">My SQUARE</a></li>
-            <li class="menu"><a href="#">Vender</a></li>
-            <li class="menu"><a href="#">Forum</a></li>
-            <li class="menu"><a href="#">Contato</a></li>
-            <li class="menu"><a href="#">Ajuda</a></li>
-            <li class="flag"><a href="#">Minhas Ofertas</a></li>
-            <li class="loging">Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></li>
-        </ul>
-    </div>
-    <div class="register">
-        <div>
-            <div class="form_title">
-                <span>Cadastre-se</span>
-            </div>
-            <div class="form_register">
-                <a href="" class="buttonflink">
-                <div class="buttonf">
-                    <span class="bolder">f</span>
+    <div class="all_containers">
+        <div class="top_line">
+            <ul>
+                <li class="menu"><a href="square.html">My SQUARE</a></li>
+                <li class="menu"><a href="#">Vender</a></li>
+                <li class="menu"><a href="#">Forum</a></li>
+                <li class="menu"><a href="#">Contato</a></li>
+                <li class="menu"><a href="#">Ajuda</a></li>
+                <li class="flag"><a href="#">Minhas Ofertas</a></li>
+                <li class="loging">Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></li>
+            </ul>
+        </div>
+        <div class="register">
+            <div>
+                <div class="form_title">
+                    <span>Cadastre-se</span>
                 </div>
-                <div class="buttonftitle">
-                    <span class="bolder">Log In</span> with <span class="bolder">Facebook</span>
-                </div>
-                </a>
-                <div class="clear"></div>
-                <div class="ou">
-                    <div class="lines">
-                        <div class="line1"></div><div class="line2"></div>
+                <div class="form_register">
+                    <a href="" class="buttonflink">
+                        <div class="buttonf">
+                            <span class="bolder">f</span>
+                        </div>
+                        <div class="buttonftitle">
+                            <span class="bolder">Log In</span> with <span class="bolder">Facebook</span>
+                        </div>
+                    </a>
+                    <div class="clear"></div>
+                    <div class="ou">
+                        <div class="lines">
+                            <div class="line1"></div><div class="line2"></div>
+                        </div>
+                        <div class="ou_text"><span>OU</span></div>
+                        <div class="lines">
+                            <div class="line1"></div><div class="line2"></div>
+                        </div>
                     </div>
-                    <div class="ou_text"><span>OU</span></div>
-                    <div class="lines">
-                        <div class="line1"></div><div class="line2"></div>
-                    </div>
-                </div>
-                <div class="clear"></div>
-                <form action="/" method="POST">
-                    <input name="fname" type="text" placeholder="First Name">
-                    <input name="lname" type="text" placeholder="Last Name">
-                    <input name="email" type="text" placeholder="Email Address">
-                    <input name="passf" type="password" placeholder="Choose Password">
-                    <input name="passs" type="password" placeholder="Password Confirm">
-                    <input name="check" id="check" type="checkbox"><label for="check">Send me Youbike updates and tips</label>
-                    <input type="submit" value="Create my Account">
-                </form>
-                <div class="copy"><span>By clicking the button above, you agree to the Terms of Service
+                    <div class="clear"></div>
+                    <form action="/" method="POST">
+                        <input name="fname" type="text" placeholder="First Name">
+                        <input name="lname" type="text" placeholder="Last Name">
+                        <input name="email" type="text" placeholder="Email Address">
+                        <input name="passf" type="password" placeholder="Choose Password">
+                        <input name="passs" type="password" placeholder="Password Confirm">
+                        <input name="check" id="check" type="checkbox"><label for="check">Send me Youbike updates and tips</label>
+                        <input type="submit" value="Create my Account">
+                    </form>
+                    <div class="copy"><span>By clicking the button above, you agree to the Terms of Service
 Xiew our Privacy Policy.</span></div>
-                <div class="clear"></div>
+                    <div class="clear"></div>
+                </div>
             </div>
         </div>
     </div>
