--- a/task6/index.html
+++ b/task6/index.html
@@ -40,7 +40,9 @@
                     <li class="article"><a href="">Статьи</a></li>
                     <li class="contacts"><a href="">Контакты</a></li>
                 </ul>
-                <div class="basked">товаров: <span id="zero">0</span> на сумму: <span>0,00 грн.</span></div>
+                <a href="#">
+                    <div class="basked">товаров: <span id="zero">0</span> на сумму: <span>0,00 грн.</span></div>
+                </a>
             </nav>
         </section>
         <section>
@@ -157,14 +159,14 @@
         <section>
             <footer>
                 <div class="bottom_logo">
-                    <img src="img/logo_1.png" alt="Logo">
-                    <img src="img/logo_2.png" alt="Logo">
-                    <img src="img/logo_3.png" alt="Logo">
-                    <img src="img/logo_4.png" alt="Logo">
-                    <img src="img/logo_5.png" alt="Logo">
-                    <img src="img/logo_6.png" alt="Logo" class="logo6">
-                    <img src="img/logo_7.png" alt="Logo">
-                    <img src="img/logo_8.png" alt="Logo">
+                    <a href="#"><img src="img/logo_1.png" alt="Logo"></a>
+                    <a href="#"><img src="img/logo_2.png" alt="Logo"></a>
+                    <a href="#"><img src="img/logo_3.png" alt="Logo"></a>
+                    <a href="#"><img src="img/logo_4.png" alt="Logo"></a>
+                    <a href="#"><img src="img/logo_5.png" alt="Logo"></a>
+                    <a href="#"><img src="img/logo_6.png" alt="Logo" class="logo6"></a>
+                    <a href="#"><img src="img/logo_7.png" alt="Logo"></a>
+                    <a href="#"><img src="img/logo_8.png" alt="Logo"></a>
                 </div>
                 <div class="bottom_menu">
                     <ul>
