--- a/task_js17_18/index.html
+++ b/task_js17_18/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home work JS #15-16</title>
+  <title>Home work JS #17-18</title>
     <!--
         <script src="js/src/script_first.js"></script>
         <script src="js/src/script_second.js"></script>
@@ -10,5 +10,6 @@
     <script src="js/dist/script.main.min.js"></script>
 </head>
 <body>
+ If you saw two alert and in console log you see two records, then home work is working! :)
 </body>
 </html>
